[gd_scene load_steps=4 format=3 uid="uid://bw8pasxsqrc5"]

[ext_resource type="PackedScene" uid="uid://cgbgfdgmfvr78" path="res://scene.tscn" id="1_p2mjf"]
[ext_resource type="Script" path="res://main.gd" id="1_rgj1n"]
[ext_resource type="Script" path="res://addons/stablediffusion_renderer/Stable_Renderer.gd" id="2_d10al"]

[node name="Node" type="Node"]
script = ExtResource("1_rgj1n")

[node name="Big_Viewport_container" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="BigViewport" type="SubViewportContainer" parent="Big_Viewport_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="Big_Viewport_container/BigViewport"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="scene" parent="Big_Viewport_container/BigViewport/SubViewport" instance=ExtResource("1_p2mjf")]

[node name="Button_container" type="AspectRatioContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -273.0
offset_right = -81.0
offset_bottom = -233.0
grow_horizontal = 0
grow_vertical = 0

[node name="SD_Button" type="Button" parent="Button_container" node_paths=PackedStringArray("texture_rect", "scene")]
layout_mode = 2
text = "Click for render with SD"
script = ExtResource("2_d10al")
prompt = "skyscraper in san francisco, unreal engine"
steps = 20
texture_rect = NodePath("../../Small_Viewport_container/SmallViewport/SubViewport/TextureRect")
scene = NodePath("../../Big_Viewport_container/BigViewport/SubViewport/scene")

[node name="Small_Viewport_container" type="AspectRatioContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_top = -218.0
grow_horizontal = 0
grow_vertical = 0

[node name="Viewport_border" type="ColorRect" parent="Small_Viewport_container"]
custom_minimum_size = Vector2(386, 0)
layout_mode = 2
size_flags_stretch_ratio = 6.43

[node name="SmallViewport" type="SubViewportContainer" parent="Small_Viewport_container"]
layout_mode = 2
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="Small_Viewport_container/SmallViewport"]
handle_input_locally = false
size = Vector2i(384, 216)
render_target_update_mode = 4

[node name="TextureRect" type="TextureRect" parent="Small_Viewport_container/SmallViewport/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
